# list-routine-learning-rs

./: .gitignore  Cargo.toml  LICENSE  Pipfile  logs2csv.sh  project.org  run_wave.sh  script.R  simulation_analysis.Rmd  size_space.sh
params/: background.txt  rec_test.trs  rec_test_0.json  signature.txt  simulation.toml  wave_1.txt  waves_1_and_2.txt
scripts/: csvs2dot.py  draw_tree.js  json2txt.py  run_wave.sh  tree_vis.html
src/: lib.rs  main.rs
trs/: simulation.toml  wave_2.txt
trs/const-3/: evaluate  signature  simulation.toml  stimuli.json  templates
trs/const-37/: evaluate  simulation.toml
trs/const-nil/: background  evaluate  signature  simulation.toml
trs/count_head_in_tail/: signature  simulation.toml
trs/head/: background  generate  signature  simulation.toml  stimuli.json
trs/waves/0/c000/: evaluate  stimuli.json  templates
trs/waves/0/c002/: stimuli.json
trs/waves/0/c003/: background  evaluate  signature  simulation.toml
trs/waves/0/c004/: background  evaluate  stimuli.json
trs/waves/1/: wave1.tgz
trs/waves/1/c000/: simulation.toml
trs/waves/1/c001/: simulation.toml  stimuli.json
trs/waves/1/c002/: simulation.toml
trs/waves/1/c003/: simulation.toml  stimuli.json
trs/waves/1/c004/: simulation.toml
trs/waves/1/c005/: simulation.toml  stimuli.json
trs/waves/1/c006/: simulation.toml  stimuli.json
trs/waves/1/c007/: simulation.toml  stimuli.json
trs/waves/1/c008/: evaluate  simulation.toml  stimuli.json
trs/waves/1/c009/: simulation.toml
trs/waves/1_5/: wave1_5.tgz
trs/waves/2/: wave_2.tgz
(+163 files in other folders)
