[package]
name = "list_routine_learning_rs"
version = "0.1.0"
authors = ["Josh Rule <joshua.s.rule@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/joshrule/list-routine-learning-rs"
homepage = "https://github.com/joshrule/list-routine-learning-rs"
description = "Rust simulations using input/output examples to learn typed first-order term rewriting systems that perform list routines."
keywords = ["term-rewriting", "hindley-milner", "learning", "program-induction", "lists"]
categories = ["science", "simulation"]
edition="2018"

[dependencies]
docopt = "1.1"
generational-arena = "0.2"
itertools = "0.8"
polytype = "6.1"
programinduction = "0.8"
rand = "0.7"
regex = "1.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
term_rewriting = "0.7"
toml = "0.5"

[profile.release]
lto = "fat"

[patch.crates-io]
term_rewriting = { path = "../../../term-rewriting-rs" }
programinduction = { path = "../../../program-induction" }
polytype = { path = "../../../polytype-rs" }

